workspace(name = "dbscan")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "aspect_bazel_lib",
    sha256 = "97fa63d95cc9af006c4c7b2123ddd2a91fb8d273012f17648e6423bae2c69470",
    strip_prefix = "bazel-lib-1.30.2",
    url = "https://github.com/aspect-build/bazel-lib/releases/download/v1.30.2/bazel-lib-v1.30.2.tar.gz",
)

load("@aspect_bazel_lib//lib:repositories.bzl", "aspect_bazel_lib_dependencies")

aspect_bazel_lib_dependencies()

load("@//:repositories.bzl", "dbscan_dependencies")

dbscan_dependencies()

load("@rules_python//python:repositories.bzl", "py_repositories", "python_register_toolchains")

py_repositories()

python_register_toolchains(
    name = "dbscan_python",
    python_version = "3.10",
)

load("@dbscan_python//:defs.bzl", "interpreter")
load("@rules_python//python:pip.bzl", "pip_parse")

pip_parse(
    name = "pypi",
    python_interpreter_target = interpreter,
    quiet = False,
    requirements_lock = "//python:requirements_lock.txt",
)

load("@pypi//:requirements.bzl", "install_deps")

install_deps()

http_archive(
    name = "rules_debian",
    sha256 = "aeb539271af85d41cf970054527ea8bc97ff7b3f664073f0552b2c9c0572ea62",
    strip_prefix = "rules_debian-e374e319b864d5bd251407565eebc8ddf0e6597f",
    url = "https://github.com/psigen/rules_debian/archive/e374e319b864d5bd251407565eebc8ddf0e6597f.tar.gz",
)

load("@rules_debian//:debian.bzl", "deb_package")

deb_package(
    name = "libgomp1",
    export_cc = True,
    sha256 = "126c97f6e43cedf656fccc096f45dfb236ad1ce6ef41b8e0c57df8229b97c8f0",
    urls = [
        "http://security.ubuntu.com/ubuntu/pool/main/g/gcc-10/libgomp1_10.3.0-1ubuntu1~20.04_amd64.deb",
    ],
)

